v1.5.2 - TBD
NEW:
  It is now possible to get a Soul Speed Enchanted Book by inserting an Amethyst in the Magic Infuser.
  Now, the Dimensional Anchor itself will not travel to other dimensions.
  Now detects the WTHIT (What The Hell Is That) mod.
CHANGES:
  If you enabled the Dump Tags config option in the ADDSynthCore config, the tags are
    now sorted alphabetically, but also lists vanilla minecraft tags first, followed
    by forge tags, then tags from other mods.
  Renamed Matter/Energy Converter to Matter/Energy Core.
  Circuit Tier 8 and Circuit Tier 9 now use an Aluminum Ingot in their recipe instead of an
    Aluminum Plate.
REMOVED:
  Amethyst:
   - We use vanilla Amethyst Shards now.
   - We still spawn Amethyst Ore, and it drops a vanilla Amethyst Shard when mined.
   - If your world previously contained ADDSynth Material Amethyst or Amethyst Blocks,
      those will automatically be replaced with vanilla Amethyst Shards and Amethyst Blocks.
  Removed Null Block to Void Crystals crafting recipe.
   - Since you're probably not supposed to interact with ethereal objects.
FIXED:
  Fixed Jei recipes displaying items 1 pixel off in machine slots.
  FINALLY Fixed first two Music Boxes playing at once, if the first was directly powered.
  Fixed Music Boxes and Lasers activating from an active redstone signal when the world loads.
    - (They now remember the powered state.)
    - These should only activate on Rising Edge, aka, first tick powered on from an OFF state.
  Minecraft 1.18 version only: Fixed the Zombie Raid command not sending messages to players correctly.



v1.5.1 - February 2, 2024
NEW:
  Added JEI info for Dimensional Flux.
  Added an Auto Shutoff feature to the Plasma Generator.
  Energy Suspension Bridge lengths are now shown in the gui.
CHANGES:
  Explicitly unlock the recipes for Matter/Energy Converter and Plasma Generator when you
    pick up an Energy Crystal.
REMOVED: